# crete-release

./: CMakeLists.txt  README.md
back-end/: CMakeLists.txt
back-end/klee/: Makefile.common  crete_make_klee.sh
back-end/klee/include/bct-replay/: debug.h  qemu_globals.h  qemu_rt_info.h
back-end/klee/include/klee/: ExecutionState.h
back-end/klee/lib/: Makefile
back-end/klee/lib/Basic/: KTest.cpp
back-end/klee/lib/Core/: AddressSpace.cpp  ExecutionState.cpp  Executor.cpp  Executor.h  Memory.cpp  Memory.h  MemoryManager.cpp  MemoryManager.h
back-end/klee/lib/bct-replay/: Makefile  debug.cpp  qemu_globals.cpp  qemu_rt_info.cpp
back-end/klee/tools/klee/: Makefile  main.cpp
back-end/llvm-translator/: CMakeLists.txt
back-end/llvm-translator/qemu-1.0-llvm-translator/: Makefile.target  cpu-exec.c  cpus.c  crete-qemu.config  crete-qemu.files  crete-qemu.includes  crete_configure.sh  crete_gen_links.sh  dyngen-exec.h  exec-all.h  exec.c  globals-havlicek.h  main-loop.c  make_op_helper_bc.sh  op_helper.ll~  qemu-options.hx  softmmu_template.h  tci.c  translate-all.c  vl.c
back-end/llvm-translator/qemu-1.0-llvm-translator/hw/: pc_piix.c
back-end/llvm-translator/qemu-1.0-llvm-translator/runtime-dump/: c-wrapper.c  c-wrapper.h  crete_helper.c  custom-instructions.cpp  runtime-dump.cpp  runtime-dump.h
back-end/llvm-translator/qemu-1.0-llvm-translator/target-i386/: helper.c  helper.h  op_helper.c  ops_sse_crete.h  ops_sse_header.h  translate.c
back-end/llvm-translator/qemu-1.0-llvm-translator/tcg/: tcg-llvm.cpp  tcg-llvm.h  tcg-op.h  tcg.c
back-end/llvm-translator/qemu-1.0-llvm-translator/tcg-llvm-offline/: tcg-llvm-offline.cpp  tcg-llvm-offline.h
back-end/manager/dispatch/: CMakeLists.txt  dispatch_ui.cpp
back-end/manager/svm-node/: CMakeLists.txt  node_svm.cpp  node_svm.h
back-end/manager/vm-node/: CMakeLists.txt  node_vm.cpp  node_vm.h
front-end/guest/: CMakeLists.txt  asio  elf-reader  proc-reader  test-case
front-end/guest/boost/: Makefile  README
front-end/guest/dump/: Makefile
front-end/guest/guest-replay/: Makefile  guest-replay.files  guest_replay.cpp  guest_replay.h  run_config.cpp  run_config.h
front-end/guest/harness/: Makefile  harness_config.cpp  symfile.c
front-end/guest/hook/: Makefile  hook.c  hook.h
front-end/guest/include/: Makefile  boost
front-end/guest/include/crete/: asio  debug_flags.h  dll.h  elf_reader.h  libelf  (+8 more)
front-end/guest/lib/: CMakeLists.txt  hook
front-end/guest/preload/: Makefile  argv_processor.cpp
front-end/guest/quitvm/: Makefile
front-end/guest/run/: Makefile  harness_config.cpp  main.cpp  run.files  run.includes  run_config.cpp  runner.cpp  runner.h
front-end/guest/util/: CMakeLists.txt
front-end/guest/vm-comm/: Makefile  custom_instr.c  custom_opcode.h
(+117 files in other folders)
